feat: enhance bootstrap system with automation and DRY improvements
- Add automated githooks component with modular git hooks system
- Enhance plan command with directory tree visualization
- Implement shared path utilities for DRY compliance
- Fix destination mappings for .example file transformations
- Update target structure schema to v1.2.0 with githooks support
- Consolidate path processing logic across planner and component manager
- Add proper handling of target_prefix stripping and file renaming

Changes:
- src/packages/utils/path_utils.py: new shared utilities for path transformations
- src/packages/cli/main.py: enhanced plan command with tree display
- src/packages/core/planner.py: use shared path utilities
- src/packages/managers/component_manager.py: use shared path utilities
- src/installation-manifest.yaml: add githooks component and destination mappings
- src/target-structure.schema.yaml: update to v1.2.0 with githooks structure
- src/ai-guardrails-templates/: reorganize templat
- structure:

--- a/sh/bootstrap-dev/src/installation-manifest.yaml
+++ b/sh/bootstrap-dev/src/installation-manifest.yaml
@@ -43,14 +43,17 @@ components:
     description: "Pre-commit configuration"
     file_patterns:
       - ".pre-commit-config.yaml.example"
-      - ".pre-commit-config.yaml"
+    destination_mappings:
+      ".pre-commit-config.yaml.example": ".pre-commit-config.yaml"
 
   docs:
     description: "All documentation templates"
     file_patterns:
-      - "docs/**/*"
-      - "ai/*.md"  # capabilities.md etc
-    target_prefix: ""  # Remove 'templates/' prefix when installing
+      - "templates/docs/**/*"
+      - "templates/.ai/*.md"  # capabilities.md etc
+    target_prefix: "templates/"  # Remove 'templates/' prefix when installing
+    destination_mappings:
+      ".template": ""  # Remove .template extension from all template files
 
 # Installation profiles - reference components, not files
 profiles:
