--- a/sh/bootstrap-dev/src/plugins/commit-msg-kit/plugin-manifest.yaml
+++ b/sh/bootstrap-dev/src/plugins/commit-msg-kit/plugin-manifest.yaml
@@ -1,52 +1,45 @@
-# AI Guardrails Bootstrap - Plugin Manifest
-# Plugin: Commit Message Kit
-# Description: Git commit message templates and hooks for consistent commit standards
-
 plugin:
-  name: "commit-msg-kit"
-  version: "1.0.0"
-  description: "Git commit message templates and hooks for consistent commit standards"
-  author: "AI Guardrails Team"
-
-  # Plugin dependencies (other plugins or base components)
+  name: commit-msg-kit
+  version: 1.0.0
+  description: Git commit message templates and hooks for consistent commit standards
+  author: AI Guardrails Team
   dependencies:
-    - "core"
-
-  # Plugin-specific environment detection
+  - core
   environment:
-    detects: ["git"]
-    requires: ["git"]
-
-# Plugin file patterns (following same structure as main manifest)
+    detects:
+    - git
+    requires:
+    - git
 components:
   commit-msg:
-    description: "Git commit message templates and hooks"
+    description: Git commit message templates and hooks
     file_patterns:
-      - ".githooks/**/*"
-      - ".gitmessage.txt"
-      - ".ai/scripts/**/*"
-
+    - .githooks/**/*
+    - .gitmessage.txt
+    - .ai/scripts/**/*
   vscode-commit:
-    description: "VS Code configuration for commit messages"
+    description: VS Code configuration for commit messages
     file_patterns:
-      - ".vscode/**/*"
-
+    - .vscode/**/*
   github-commit:
-    description: "GitHub templates for commit messages"
+    description: GitHub templates for commit messages
     file_patterns:
-      - ".github/**/*"
-
-# Plugin profiles (groups of components that work together)
+    - .github/**/*
 profiles:
   commit-msg-standard:
-    description: "Standard commit message setup with hooks and templates"
+    description: Standard commit message setup with hooks and templates
     components:
-      - "commit-msg"
-      - "vscode-commit"
-
+    - commit-msg
+    - vscode-commit
   commit-msg-full:
-    description: "Full commit message setup including GitHub templates"
+    description: Full commit message setup including GitHub templates
     components:
-      - "commit-msg"
-      - "vscode-commit"
-      - "github-commit"
+    - commit-msg
+    - vscode-commit
+    - github-commit
+hooks:
+  pre_commit:
+    category: validation
+    priority: 10
+    script: 11-commit-msg-msg-validation.sh
+    description: Migrated from 10-commit-msg.sh
